# bevy-network-prototype

./: Cargo.toml  README.md
src/: client.rs  main.rs  server.rs
