[package]
name = "bevy-network-prototype"
version = "0.1.0"
authors = ["Mat Geist <matgeist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_networking_turbulence = "0.3"
log = "0.4"
simple_logger = "1.11"